2005-09-25  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: New file.