@@ -1,5 +1,8 @@
 2005-12-11  Moritz Schulte  <moritz@g10code.com>
 
+	* support.c (authenticate): Use card_auth() instead of
+	card_sign().
+
 	* usersdb.c, usersdb.h: Added documentation.
 
 2005-12-10  Moritz Schulte  <moritz@g10code.com>
