@@ -1,3 +1,7 @@
+2005-12-11  Moritz Schulte  <moritz@g10code.com>
+
+	* Makefile.am: Touch user database file.
+
 2005-09-25  Moritz Schulte  <moritz@g10code.com>
 
 	* Makefile.am: New file.
